# CLog

./: .cproject  .project  CMakeLists.txt  Makefile  README.md
demo/: .cproject  .project  DemoLog.cpp  Makefile
src/: CLog.cpp  CLog.h
